--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/firebase": "^4.16.0",
+    "@ionic-native/geolocation": "^4.17.0",
     "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
