--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/firebase": "^4.16.0",
     "@ionic-native/geolocation": "^4.17.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/native-geocoder": "^5.0.0",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
@@ -41,6 +42,7 @@
     "cordova-plugin-googlemaps": "^2.4.4",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativegeocoder": "^3.1.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.3",
@@ -77,7 +79,8 @@
       "mx.ferreyra.callnumber": {},
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "browser",
