--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/call-number": "^4.20.0",
     "@ionic-native/camera": "^4.20.0",
+    "@ionic-native/clipboard": "^4.20.0",
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/email-composer": "^5.1.0",
     "@ionic-native/fcm": "^4.20.0",
@@ -41,6 +42,7 @@
     "animate.css": "^3.7.2",
     "call-number": "^1.0.1",
     "cordova-android-support-gradle-release": "^3.0.1",
+    "cordova-clipboard": "1.3.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-advanced-http": "2.0.5",
